@@ -11,8 +11,9 @@ imgscalr.lib,metadata.extractor
 if [[ "$OSTYPE" == "linux-gnu"* ]]; then
 	
 	printf "\nMaking *nix executable\n";
+	cp target/slimview-1.0.7.jar target/bin/
 	echo "#!/bin/bash" > target/bin/slimview.sh
-	echo "bin/runtime/bin/java --module-path target/bin/lib -add-modules $MODULES -jar target/slimview-1.0.7.jar $1" >> target/bin/slimview.sh;
+	echo "runtime/bin/java --module-path lib --add-modules $MODULES -jar slimview-1.0.7.jar $1" >> target/bin/slimview.sh;
 	chmod +x target/bin/slimview.sh;
 	
 elif [[ "$OSTYPE" == "cygwin" ]]; then
